add jenkins setup related